[gd_scene load_steps=7 format=2]

[ext_resource path="res://resorces/button/button_1.png" type="Texture" id=1]
[ext_resource path="res://level_parts/switch.gd" type="Script" id=2]
[ext_resource path="res://resorces/button/button_2.png" type="Texture" id=3]
[ext_resource path="res://resorces/dynastium.ttf" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=2]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="switch" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="button_1" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="button_2" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -87.0
margin_top = -33.0
margin_right = 116.0
margin_bottom = -17.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = -83.9114
margin_top = -32.0357
margin_right = 76.0886
margin_bottom = -16.0357
custom_fonts/font = SubResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_switch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_switch_body_exited"]
